feat: add (basic) competitions
