# app/handler/competition.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"database/sql"
+	"errors"
 	"time"
 
 	"github.com/labstack/echo/v4"
@@ -8,6 +10,17 @@ import (
 	"github.com/raitonoberu/personal-best/db/sqlc"
 )
 
+// @Summary Create competition
+// @Security Bearer
+// @Description Create new competition.
+// @Description Days must be different (no same day twice).
+// @Description Time must be in format HH:MM.
+// @Tags competition
+// @Accept json
+// @Produce json
+// @Param request body model.CreateCompetitionRequest true "body"
+// @Success 200 {object} model.CreateCompetitionResponse
+// @Router /api/competitions [post]
 func (h Handler) CreateCompetition(c echo.Context) error {
 	if err := h.ensureCanCreate(c); err != nil {
 		return err
@@ -18,23 +31,75 @@ func (h Handler) CreateCompetition(c echo.Context) error {
 		return err
 	}
 
-	comp, err := h.queries.CreateCompetition(c.Request().Context(),
+	closesAt := parseDate(req.ClosesAt)
+	for _, d := range req.Days {
+		day := parseDate(d.Date)
+		if day.Equal(closesAt) || day.Before(closesAt) {
+			return ErrStartBeforeClose
+		}
+
+		startTime := parseTime(d.StartTime, day)
+		endTime := parseTime(d.EndTime, day)
+
+		if startTime.After(endTime) {
+			return ErrEndBeforeStart
+		}
+	}
+
+	// TODO: here we need MUCH MORE CHECKS BITCH
+
+	tx, err := h.db.Begin()
+	if err != nil {
+		return err
+	}
+	defer tx.Rollback()
+
+	qtx := h.queries.WithTx(tx)
+
+	comp, err := qtx.CreateCompetition(c.Request().Context(),
 		sqlc.CreateCompetitionParams{
 			TrainerID:   getUserID(c),
 			Name:        req.Name,
 			Description: req.Description,
-			StartDate:   parseDate(req.StartDate),
 			Tours:       req.Tours,
 			Age:         req.Age,
 			Size:        req.Size,
-			ClosesAt:    parseDate(req.ClosesAt),
+			ClosesAt:    closesAt,
 		})
 	if err != nil {
 		return err
 	}
+
+	for _, d := range req.Days {
+		date := parseDate(d.Date)
+		_, err := qtx.CreateCompetitionDay(c.Request().Context(),
+			sqlc.CreateCompetitionDayParams{
+				CompetitionID: comp.ID,
+				Date:          date,
+				StartTime:     parseTime(d.StartTime, date),
+				EndTime:       parseTime(d.EndTime, date),
+			})
+		if err != nil {
+			return err
+		}
+	}
+
+	if err := tx.Commit(); err != nil {
+		return err
+	}
+
 	return c.JSON(201, model.NewCreateCompetitionResponse(comp))
 }
 
+// @Summary Get competition
+// @Security Bearer
+// @Description Return competition by ID
+// @Descripiton Not much yet :)
+// @Tags competition
+// @Produce json
+// @Param request path model.GetCompetitionRequest true "path"
+// @Success 200 {object} model.GetCompetitionResponse
+// @Router /api/competitions/{id} [get]
 func (h Handler) GetCompetition(c echo.Context) error {
 	if err := h.ensureCanView(c); err != nil {
 		return err
@@ -49,9 +114,24 @@ func (h Handler) GetCompetition(c echo.Context) error {
 	if err != nil {
 		return err
 	}
-	return c.JSON(200, model.NewGetCompetitionResponse(competition))
+
+	days, err := h.queries.GetCompetitionDays(c.Request().Context(), req.ID)
+	if err != nil {
+		return err
+	}
+
+	return c.JSON(200, model.NewGetCompetitionResponse(competition, days))
 }
 
+// @Summary List competition
+// @Security Bearer
+// @Description List all competitions from new to old
+// @Description For now there is no way to get start/end but im working on it :)
+// @Tags competition
+// @Produce json
+// @Param request query model.ListCompetitionsRequest true "query"
+// @Success 200 {object} model.ListCompetitionsResponse
+// @Router /api/competitions [get]
 func (h Handler) ListCompetitions(c echo.Context) error {
 	if err := h.ensureCanView(c); err != nil {
 		return err
@@ -65,6 +145,9 @@ func (h Handler) ListCompetitions(c echo.Context) error {
 	competitions, err := h.queries.ListCompetitions(c.Request().Context(),
 		sqlc.ListCompetitionsParams(req))
 	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			return ErrCompetitionNotFound
+		}
 		return err
 	}
 	return c.JSON(200, model.NewListCompetitionsResponse(competitions))
